--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, recusandae consequuntur cum corrupti eveniet nam ipsum, earum, voluptas molestiae ab deleniti assumenda! Dolorem magni voluptas magnam eligendi illum commodi impedit!
+    <img src="https://media.tenor.com/FYsjyvi3C7kAAAAi/rupert-cat.gif" alt="">
 </body>
 </html>
